Fix more code smells